# quantum-simpl

./: CLAUDE.md  Cargo.toml  README.ja.md  README.md
book/en/: book.toml
book/ja/: book.toml
docs/: index.html
docs/en/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3a944d4a.js  toc-4f8d085e.js  toc.html
docs/ja/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-79809bdc.js  toc-4b1e350e.js  toc.html
docs/plans/: 2026-03-06-quantum-simpl-design.md  2026-03-06-quantum-simpl-implementation.md  2026-03-07-correlation-function-design.md  2026-03-07-correlation-function-implementation.md  2026-03-07-merge-and-docs-design.md  2026-03-07-merge-and-docs-implementation.md  2026-03-07-readme-design.md  2026-03-07-readme-implementation.md  2026-03-07-ys-transform.md
docs/test-reports/: test-feature-20260307-113500.md  test-feature-20260307-120000.md  test-feature-20260308-010000.md
examples/: correlation_ss.qsl  heisenberg_4site.qsl  hubbard_2site.qsl
src/: lib.rs  main.rs
src/core/: classify.rs  combine.rs  expand.rs  green.rs  mod.rs  normal.rs  op.rs  symmetry.rs  transform.rs
src/output/: correlation.rs  mod.rs  mvmc.rs
src/parser/: ast.rs  mod.rs
tests/: unit_classify.rs  unit_combine.rs  unit_correlation_output.rs  unit_expand.rs  unit_green.rs  unit_mvmc.rs  unit_mvmc_green.rs  unit_normal.rs  unit_op.rs  unit_parser.rs  unit_parser_spindot.rs  unit_spin_to_fermion.rs  unit_symmetry.rs  unit_transform.rs
tests/integration/: test_correlation.rs  test_heisenberg.rs  test_hubbard.rs  test_mvmc_output.rs  (+3 more)
(+32 files in other folders)
