[package]
name = "quantum-simpl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantum-simpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
rustc-hash = "2"
rayon = "1"

[dev-dependencies]
tempfile = "3"
