[package]
name = "quantum-simpl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantum-simpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
rustc-hash = "2"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "test_pipeline"
path = "tests/integration/test_pipeline.rs"

[[test]]
name = "test_hubbard"
path = "tests/integration/test_hubbard.rs"

[[test]]
name = "test_heisenberg"
path = "tests/integration/test_heisenberg.rs"

[[test]]
name = "test_mvmc_output"
path = "tests/integration/test_mvmc_output.rs"

[[test]]
name = "test_ys_transform"
path = "tests/integration/test_ys_transform.rs"

[[test]]
name = "test_ys_validation"
path = "tests/integration/test_ys_validation.rs"

[[test]]
name = "test_correlation"
path = "tests/integration/test_correlation.rs"
